--- a/code/data_preparation/00.20_wells_wizardFormatting.html
+++ b/code/data_preparation/00.20_wells_wizardFormatting.html
@@ -235,9 +235,8 @@ div.tocify {
 library(sf)
 library(lubridate)
 
-# get filepath to R project on local system
-library(here)
-mainDir &lt;- here()
+# get filepath to repo on local system
+mainDir &lt;- '/Users/deinesji/Documents/code_git/1phd/DeinesEtAl2019_ERL_lema1'
 
 sessionInfo()</code></pre>
 <pre><code>## R version 3.5.1 (2018-07-02)
@@ -255,9 +254,9 @@ sessionInfo()</code></pre>
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] here_0.1        lubridate_1.7.4 sf_0.6-3        forcats_0.3.0  
-##  [5] stringr_1.3.1   dplyr_0.7.6     purrr_0.2.5     readr_1.1.1    
-##  [9] tidyr_0.8.1     tibble_1.4.2    ggplot2_3.1.0   tidyverse_1.2.1
+##  [1] lubridate_1.7.4 sf_0.6-3        forcats_0.3.0   stringr_1.3.1  
+##  [5] dplyr_0.7.6     purrr_0.2.5     readr_1.1.1     tidyr_0.8.1    
+##  [9] tibble_1.4.2    ggplot2_3.1.0   tidyverse_1.2.1
 ## 
 ## loaded via a namespace (and not attached):
 ##  [1] tidyselect_0.2.4 haven_1.1.2      lattice_0.20-35  colorspace_1.3-2
